--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 twitter_username: username
 github_username: username
-minimal_mistakes_skin: "dark" #"default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin: "contrast" #"default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 search: true
 
 # Build settings
@@ -59,7 +59,7 @@ plugins:
 
 author:
   name   : "Camille Le Roy"
-  avatar : "/assets/images/WUR profile picture.jpg"
+  avatar : "/assets/images/WUR profile picture.JPG"
   bio    : "Data scientist and biologist. I combines biomechanics and ecological approach to study animal locomotion"
   links:
  #   - label: "Website"
