--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Camille-Le-Roy"
     - label: "Google Scholar"
-      icon: "ai ai-google-scholar"
+      icon: "fa-brands fa-google-scholar"
       url: "https://scholar.google.com/citations?user=SP69DnUAAAAJ&hl=en"
  #   - label: "Instagram"
  #     icon: "fab fa-fw fa-instagram"
@@ -87,7 +87,7 @@ footer:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Camille-Le-Roy"
     - label: "Google Scholar"
-      icon: "ai ai-google-scholar"
+      icon: "fa-brands fa-google-scholar"
       url: "https://scholar.google.com/citations?user=SP69DnUAAAAJ&hl=en"
 #    - label: "Instagram"
 #      icon: "fab fa-fw fa-instagram"
