--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Camille Le Roy, PhD
+title: Camille Le Roy
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -58,7 +58,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Camille Le Roy"
+  name   : "Camille Le Roy, PhD"
   avatar : "/assets/images/WUR profile picture.JPG"
   bio    : "Data scientist and biologist"
   links:
