--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 main:
-  - title: "Home"
-    url: "/splash-page/"
+ # - title: "Home"
+ #   url: "/"
   - title: "Projects"
     url: /projects/
   - title: "Research"
