--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,9 @@ search: false
 
 # Build settings
 markdown: kramdown
-remote_theme: mmistakes/minimal-mistakes
+#remote_theme: mmistakes/minimal-mistakes
+theme: "minimal-mistakes-jekyll" # because I have downloaded the them locally to allow working offline
+
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
